src/frontend/src/DSLParser/ChaseParser.cpp

// Generated from Chase.g4 by ANTLR 4.5.3


#include "DSLParser/ChaseListener.h"

#include "DSLParser/ChaseParser.h"


using namespace antlrcpp;
using namespace antlr4;

ChaseParser::ChaseParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ChaseParser::~ChaseParser() {
  delete _interpreter;
}

std::string ChaseParser::getGrammarFileName() const {
  return "Chase.g4";
}

const std::vector<std::string>& ChaseParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ChaseParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ChaseSpecContext ------------------------------------------------------------------

ChaseParser::ChaseSpecContext::ChaseSpecContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::TypesContext> ChaseParser::ChaseSpecContext::types() {
  return getRuleContext<ChaseParser::TypesContext>(0);
}

Ref<ChaseParser::ComponentsContext> ChaseParser::ChaseSpecContext::components() {
  return getRuleContext<ChaseParser::ComponentsContext>(0);
}

Ref<ChaseParser::ConnectionsContext> ChaseParser::ChaseSpecContext::connections() {
  return getRuleContext<ChaseParser::ConnectionsContext>(0);
}

Ref<ChaseParser::RequirementsContext> ChaseParser::ChaseSpecContext::requirements() {
  return getRuleContext<ChaseParser::RequirementsContext>(0);
}

Ref<tree::TerminalNode> ChaseParser::ChaseSpecContext::EOF() {
  return getToken(ChaseParser::EOF, 0);
}

Ref<ChaseParser::AbbreviationsContext> ChaseParser::ChaseSpecContext::abbreviations() {
  return getRuleContext<ChaseParser::AbbreviationsContext>(0);
}

Ref<ChaseParser::AssumptionsContext> ChaseParser::ChaseSpecContext::assumptions() {
  return getRuleContext<ChaseParser::AssumptionsContext>(0);
}


ssize_t ChaseParser::ChaseSpecContext::getRuleIndex() const {
  return ChaseParser::RuleChaseSpec;
}

void ChaseParser::ChaseSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChaseSpec(this);
}

void ChaseParser::ChaseSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChaseSpec(this);
}

Ref<ChaseParser::ChaseSpecContext> ChaseParser::chaseSpec() {
  Ref<ChaseSpecContext> _localctx = std::make_shared<ChaseSpecContext>(_ctx, getState());
  enterRule(_localctx, 0, ChaseParser::RuleChaseSpec);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    types();
    setState(51);
    components();
    setState(53);

    _la = _input->LA(1);
    if (_la == ChaseParser::T__9) {
      setState(52);
      abbreviations();
    }
    setState(55);
    connections();
    setState(56);
    requirements();
    setState(58);

    _la = _input->LA(1);
    if (_la == ChaseParser::T__12) {
      setState(57);
      assumptions();
    }
    setState(60);
    match(ChaseParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

ChaseParser::TypesContext::TypesContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::TypesKWContext> ChaseParser::TypesContext::typesKW() {
  return getRuleContext<ChaseParser::TypesKWContext>(0);
}

std::vector<Ref<ChaseParser::TypeContext>> ChaseParser::TypesContext::type() {
  return getRuleContexts<ChaseParser::TypeContext>();
}

Ref<ChaseParser::TypeContext> ChaseParser::TypesContext::type(int i) {
  return getRuleContext<ChaseParser::TypeContext>((size_t)i);
}


ssize_t ChaseParser::TypesContext::getRuleIndex() const {
  return ChaseParser::RuleTypes;
}

void ChaseParser::TypesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypes(this);
}

void ChaseParser::TypesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypes(this);
}

Ref<ChaseParser::TypesContext> ChaseParser::types() {
  Ref<TypesContext> _localctx = std::make_shared<TypesContext>(_ctx, getState());
  enterRule(_localctx, 2, ChaseParser::RuleTypes);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    typesKW();
    setState(64); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(63);
      type();
      setState(66); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

ChaseParser::TypeContext::TypeContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> ChaseParser::TypeContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

Ref<ChaseParser::NameContext> ChaseParser::TypeContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}

std::vector<Ref<tree::TerminalNode>> ChaseParser::TypeContext::ID() {
  return getTokens(ChaseParser::ID);
}

Ref<tree::TerminalNode> ChaseParser::TypeContext::ID(int i) {
  return getToken(ChaseParser::ID, (size_t)i);
}


ssize_t ChaseParser::TypeContext::getRuleIndex() const {
  return ChaseParser::RuleType;
}

void ChaseParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void ChaseParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

Ref<ChaseParser::TypeContext> ChaseParser::type() {
  Ref<TypeContext> _localctx = std::make_shared<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, ChaseParser::RuleType);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    std::dynamic_pointer_cast<TypeContext>(_localctx)->nam = name();
    setState(69);
    match(ChaseParser::T__0);
    setState(70);
    std::dynamic_pointer_cast<TypeContext>(_localctx)->typ = match(ChaseParser::ID);
    setState(81);

    _la = _input->LA(1);
    if (_la == ChaseParser::T__1) {
      setState(71);
      match(ChaseParser::T__1);
      setState(72);
      std::dynamic_pointer_cast<TypeContext>(_localctx)->idToken = match(ChaseParser::ID);
      std::dynamic_pointer_cast<TypeContext>(_localctx)->par.push_back(std::dynamic_pointer_cast<TypeContext>(_localctx)->idToken);
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ChaseParser::T__2) {
        setState(73);
        match(ChaseParser::T__2);
        setState(74);
        std::dynamic_pointer_cast<TypeContext>(_localctx)->idToken = match(ChaseParser::ID);
        std::dynamic_pointer_cast<TypeContext>(_localctx)->par.push_back(std::dynamic_pointer_cast<TypeContext>(_localctx)->idToken);
        setState(79);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(80);
      match(ChaseParser::T__3);
    }
    setState(83);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentsContext ------------------------------------------------------------------

ChaseParser::ComponentsContext::ComponentsContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::ComponentsKWContext> ChaseParser::ComponentsContext::componentsKW() {
  return getRuleContext<ChaseParser::ComponentsKWContext>(0);
}

std::vector<Ref<ChaseParser::ComponentContext>> ChaseParser::ComponentsContext::component() {
  return getRuleContexts<ChaseParser::ComponentContext>();
}

Ref<ChaseParser::ComponentContext> ChaseParser::ComponentsContext::component(int i) {
  return getRuleContext<ChaseParser::ComponentContext>((size_t)i);
}


ssize_t ChaseParser::ComponentsContext::getRuleIndex() const {
  return ChaseParser::RuleComponents;
}

void ChaseParser::ComponentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponents(this);
}

void ChaseParser::ComponentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponents(this);
}

Ref<ChaseParser::ComponentsContext> ChaseParser::components() {
  Ref<ComponentsContext> _localctx = std::make_shared<ComponentsContext>(_ctx, getState());
  enterRule(_localctx, 6, ChaseParser::RuleComponents);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    componentsKW();
    setState(87); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(86);
      component();
      setState(89); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentContext ------------------------------------------------------------------

ChaseParser::ComponentContext::ComponentContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> ChaseParser::ComponentContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

Ref<ChaseParser::NameContext> ChaseParser::ComponentContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}

Ref<tree::TerminalNode> ChaseParser::ComponentContext::NUMBER() {
  return getToken(ChaseParser::NUMBER, 0);
}


ssize_t ChaseParser::ComponentContext::getRuleIndex() const {
  return ChaseParser::RuleComponent;
}

void ChaseParser::ComponentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponent(this);
}

void ChaseParser::ComponentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponent(this);
}

Ref<ChaseParser::ComponentContext> ChaseParser::component() {
  Ref<ComponentContext> _localctx = std::make_shared<ComponentContext>(_ctx, getState());
  enterRule(_localctx, 8, ChaseParser::RuleComponent);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    std::dynamic_pointer_cast<ComponentContext>(_localctx)->nam = name();
    setState(92);
    match(ChaseParser::T__0);
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChaseParser::NUMBER: {
        setState(93);
        std::dynamic_pointer_cast<ComponentContext>(_localctx)->num = match(ChaseParser::NUMBER);
        break;
      }

      case ChaseParser::T__4: {
        setState(94);
        match(ChaseParser::T__4);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(97);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

ChaseParser::NameContext::NameContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<Ref<tree::TerminalNode>> ChaseParser::NameContext::ID() {
  return getTokens(ChaseParser::ID);
}

Ref<tree::TerminalNode> ChaseParser::NameContext::ID(int i) {
  return getToken(ChaseParser::ID, (size_t)i);
}

Ref<tree::TerminalNode> ChaseParser::NameContext::NUMBER() {
  return getToken(ChaseParser::NUMBER, 0);
}


ssize_t ChaseParser::NameContext::getRuleIndex() const {
  return ChaseParser::RuleName;
}

void ChaseParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void ChaseParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}

Ref<ChaseParser::NameContext> ChaseParser::name() {
  Ref<NameContext> _localctx = std::make_shared<NameContext>(_ctx, getState());
  enterRule(_localctx, 10, ChaseParser::RuleName);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChaseParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(100); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(99);
          std::dynamic_pointer_cast<NameContext>(_localctx)->idToken = match(ChaseParser::ID);
          std::dynamic_pointer_cast<NameContext>(_localctx)->comp.push_back(std::dynamic_pointer_cast<NameContext>(_localctx)->idToken);
          setState(102); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == ChaseParser::ID);
        setState(105);

        _la = _input->LA(1);
        if (_la == ChaseParser::NUMBER) {
          setState(104);
          std::dynamic_pointer_cast<NameContext>(_localctx)->num = match(ChaseParser::NUMBER);
        }
        break;
      }

      case ChaseParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(107);
        std::dynamic_pointer_cast<NameContext>(_localctx)->num = match(ChaseParser::NUMBER);
        setState(109); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(108);
          std::dynamic_pointer_cast<NameContext>(_localctx)->idToken = match(ChaseParser::ID);
          std::dynamic_pointer_cast<NameContext>(_localctx)->comp.push_back(std::dynamic_pointer_cast<NameContext>(_localctx)->idToken);
          setState(111); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == ChaseParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AbbreviationsContext ------------------------------------------------------------------

ChaseParser::AbbreviationsContext::AbbreviationsContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::AbbreviationsKWContext> ChaseParser::AbbreviationsContext::abbreviationsKW() {
  return getRuleContext<ChaseParser::AbbreviationsKWContext>(0);
}

std::vector<Ref<ChaseParser::AbbrevContext>> ChaseParser::AbbreviationsContext::abbrev() {
  return getRuleContexts<ChaseParser::AbbrevContext>();
}

Ref<ChaseParser::AbbrevContext> ChaseParser::AbbreviationsContext::abbrev(int i) {
  return getRuleContext<ChaseParser::AbbrevContext>((size_t)i);
}


ssize_t ChaseParser::AbbreviationsContext::getRuleIndex() const {
  return ChaseParser::RuleAbbreviations;
}

void ChaseParser::AbbreviationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAbbreviations(this);
}

void ChaseParser::AbbreviationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAbbreviations(this);
}

Ref<ChaseParser::AbbreviationsContext> ChaseParser::abbreviations() {
  Ref<AbbreviationsContext> _localctx = std::make_shared<AbbreviationsContext>(_ctx, getState());
  enterRule(_localctx, 12, ChaseParser::RuleAbbreviations);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    abbreviationsKW();
    setState(117); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(116);
      abbrev();
      setState(119); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AbbrevContext ------------------------------------------------------------------

ChaseParser::AbbrevContext::AbbrevContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> ChaseParser::AbbrevContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

Ref<ChaseParser::NameContext> ChaseParser::AbbrevContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}

Ref<tree::TerminalNode> ChaseParser::AbbrevContext::ID() {
  return getToken(ChaseParser::ID, 0);
}


ssize_t ChaseParser::AbbrevContext::getRuleIndex() const {
  return ChaseParser::RuleAbbrev;
}

void ChaseParser::AbbrevContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAbbrev(this);
}

void ChaseParser::AbbrevContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAbbrev(this);
}

Ref<ChaseParser::AbbrevContext> ChaseParser::abbrev() {
  Ref<AbbrevContext> _localctx = std::make_shared<AbbrevContext>(_ctx, getState());
  enterRule(_localctx, 14, ChaseParser::RuleAbbrev);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    std::dynamic_pointer_cast<AbbrevContext>(_localctx)->nam = name();
    setState(122);
    match(ChaseParser::T__0);
    setState(123);
    std::dynamic_pointer_cast<AbbrevContext>(_localctx)->abbr = match(ChaseParser::ID);
    setState(124);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConnectionsContext ------------------------------------------------------------------

ChaseParser::ConnectionsContext::ConnectionsContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::ConnectionsKWContext> ChaseParser::ConnectionsContext::connectionsKW() {
  return getRuleContext<ChaseParser::ConnectionsKWContext>(0);
}

std::vector<Ref<ChaseParser::ConnContext>> ChaseParser::ConnectionsContext::conn() {
  return getRuleContexts<ChaseParser::ConnContext>();
}

Ref<ChaseParser::ConnContext> ChaseParser::ConnectionsContext::conn(int i) {
  return getRuleContext<ChaseParser::ConnContext>((size_t)i);
}

std::vector<Ref<ChaseParser::SwitchedContext>> ChaseParser::ConnectionsContext::switched() {
  return getRuleContexts<ChaseParser::SwitchedContext>();
}

Ref<ChaseParser::SwitchedContext> ChaseParser::ConnectionsContext::switched(int i) {
  return getRuleContext<ChaseParser::SwitchedContext>((size_t)i);
}

std::vector<Ref<ChaseParser::UnswitchedContext>> ChaseParser::ConnectionsContext::unswitched() {
  return getRuleContexts<ChaseParser::UnswitchedContext>();
}

Ref<ChaseParser::UnswitchedContext> ChaseParser::ConnectionsContext::unswitched(int i) {
  return getRuleContext<ChaseParser::UnswitchedContext>((size_t)i);
}


ssize_t ChaseParser::ConnectionsContext::getRuleIndex() const {
  return ChaseParser::RuleConnections;
}

void ChaseParser::ConnectionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConnections(this);
}

void ChaseParser::ConnectionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConnections(this);
}

Ref<ChaseParser::ConnectionsContext> ChaseParser::connections() {
  Ref<ConnectionsContext> _localctx = std::make_shared<ConnectionsContext>(_ctx, getState());
  enterRule(_localctx, 16, ChaseParser::RuleConnections);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    connectionsKW();
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER) {
      setState(127);
      conn();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(144);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ChaseParser::T__13

    || _la == ChaseParser::T__14) {
      setState(135);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ChaseParser::T__13: {
          setState(133);
          switched();
          break;
        }

        case ChaseParser::T__14: {
          setState(134);
          unswitched();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(138); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(137);
        conn();
        setState(140); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == ChaseParser::ID

      || _la == ChaseParser::NUMBER);
      setState(146);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SwitchedContext ------------------------------------------------------------------

ChaseParser::SwitchedContext::SwitchedContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::SwitchedKWContext> ChaseParser::SwitchedContext::switchedKW() {
  return getRuleContext<ChaseParser::SwitchedKWContext>(0);
}

Ref<ChaseParser::NameContext> ChaseParser::SwitchedContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}


ssize_t ChaseParser::SwitchedContext::getRuleIndex() const {
  return ChaseParser::RuleSwitched;
}

void ChaseParser::SwitchedContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSwitched(this);
}

void ChaseParser::SwitchedContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSwitched(this);
}

Ref<ChaseParser::SwitchedContext> ChaseParser::switched() {
  Ref<SwitchedContext> _localctx = std::make_shared<SwitchedContext>(_ctx, getState());
  enterRule(_localctx, 18, ChaseParser::RuleSwitched);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    switchedKW();
    setState(148);
    match(ChaseParser::T__1);
    setState(149);
    std::dynamic_pointer_cast<SwitchedContext>(_localctx)->sw = name();
    setState(150);
    match(ChaseParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnswitchedContext ------------------------------------------------------------------

ChaseParser::UnswitchedContext::UnswitchedContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::UnswitchedKWContext> ChaseParser::UnswitchedContext::unswitchedKW() {
  return getRuleContext<ChaseParser::UnswitchedKWContext>(0);
}


ssize_t ChaseParser::UnswitchedContext::getRuleIndex() const {
  return ChaseParser::RuleUnswitched;
}

void ChaseParser::UnswitchedContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnswitched(this);
}

void ChaseParser::UnswitchedContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnswitched(this);
}

Ref<ChaseParser::UnswitchedContext> ChaseParser::unswitched() {
  Ref<UnswitchedContext> _localctx = std::make_shared<UnswitchedContext>(_ctx, getState());
  enterRule(_localctx, 20, ChaseParser::RuleUnswitched);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    unswitchedKW();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConnContext ------------------------------------------------------------------

ChaseParser::ConnContext::ConnContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> ChaseParser::ConnContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

std::vector<Ref<ChaseParser::NameContext>> ChaseParser::ConnContext::name() {
  return getRuleContexts<ChaseParser::NameContext>();
}

Ref<ChaseParser::NameContext> ChaseParser::ConnContext::name(int i) {
  return getRuleContext<ChaseParser::NameContext>((size_t)i);
}


ssize_t ChaseParser::ConnContext::getRuleIndex() const {
  return ChaseParser::RuleConn;
}

void ChaseParser::ConnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConn(this);
}

void ChaseParser::ConnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConn(this);
}

Ref<ChaseParser::ConnContext> ChaseParser::conn() {
  Ref<ConnContext> _localctx = std::make_shared<ConnContext>(_ctx, getState());
  enterRule(_localctx, 22, ChaseParser::RuleConn);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(154);
    std::dynamic_pointer_cast<ConnContext>(_localctx)->from = name();
    setState(162);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChaseParser::T__5: {
        setState(155);
        match(ChaseParser::T__5);
        break;
      }

      case ChaseParser::T__6: {
        setState(156);
        match(ChaseParser::T__6);
        setState(157);
        match(ChaseParser::T__1);
        setState(158);
        std::dynamic_pointer_cast<ConnContext>(_localctx)->sw = name();
        setState(159);
        match(ChaseParser::T__3);
        setState(160);
        match(ChaseParser::T__6);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(164);
    std::dynamic_pointer_cast<ConnContext>(_localctx)->to = name();
    setState(165);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RequirementsContext ------------------------------------------------------------------

ChaseParser::RequirementsContext::RequirementsContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<ChaseParser::RequirementsKWContext> ChaseParser::RequirementsContext::requirementsKW() {
  return getRuleContext<ChaseParser::RequirementsKWContext>(0);
}

std::vector<Ref<ChaseParser::ReqContext>> ChaseParser::RequirementsContext::req() {
  return getRuleContexts<ChaseParser::ReqContext>();
}

Ref<ChaseParser::ReqContext> ChaseParser::RequirementsContext::req(int i) {
  return getRuleContext<ChaseParser::ReqContext>((size_t)i);
}


ssize_t ChaseParser::RequirementsContext::getRuleIndex() const {
  return ChaseParser::RuleRequirements;
}

void ChaseParser::RequirementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRequirements(this);
}
